--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "shared-trip",
+  "name": "crypto-trade",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.16"
+  "engines": {
+    "node": "14.x"
   }
 }
