--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "crypto-trade",
+  "name": "shared-trip",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,8 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.8"
+    "mongoose": "^6.3.8",
+    "open": "^8.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
