--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js"
+    "start": "node ./src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +16,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.8",
-    "open": "^8.4.0"
+    "mongoose": "^6.3.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
